--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My PortFolio</title>
-    <link rel="Stylesheet" href="/profile2/jprofile2 theme2.css">
+    <link rel="Stylesheet" href="jprofile2 theme2.css">
     <link rel="Stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
     <section>
         <div id="fullwrapper">
             <div class="profilepic">
-                <img src="/myportfolio/jaswanthh.jpg" alt="profile Pic">
+                <img src="jaswanthh.jpg" alt="profile Pic">
             </div>
 
             <div class="herotext">
@@ -87,7 +87,7 @@
 
 
     <!-- ============================================================================================================ -->
-    <script src="/profile2/profile2.js"></Script>
+    <script src="profile2.js"></Script>
 </body>
 
 </html>
