--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <div class="namelogo">
             <i class="fa-solid fa-j"></i>
-            <div class="namelogotext">Porfile</div>
+            <div class="namelogotext">Profile</div>
         </div>
 
         <div class="contact_logos">
