--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- ================================================ -->
     <footer id="footer_contact">
         <div class="contsct_info">
-            <p><i class="fa-solid fa-envelope" style="color: #ff91e8;"></i>jeswanth012@gmail.com ||
+            <p><a href="mailto:jeswanth012@gmail.com"><i class="fa-solid fa-envelope" style="color: #ff91e8;"></i>jeswanth012@gmail.com </a>||
                 <i class="fa-solid fa-phone" style="color: #ea4c89;"></i>+919701445846
             </p>
 
